RISC-V: TestIntVect.java fails after JDK-8332153 when running without RVV

XMLWordPrintable

    • b03
    • riscv
    • linux

        test/hotspot/jtreg/compiler/c2/cr7200264/TestIntVect.java fails without RVV after JDK-8332153 in fastdebug mode.

        UseRVV status:
        ```
        [zifeihan@fedora-riscv bin]$ ./java -XX:+PrintFlagsFinal -version | grep UseRVV
             bool UseRVV = false {ARCH product} {default}
             bool UseRVVForBigIntegerShiftIntrinsics = false {ARCH product} {default}
        openjdk version "24-internal" 2025-03-18
        OpenJDK Runtime Environment (fastdebug build 24-internal-adhoc.zifeihan.jdk)
        OpenJDK 64-Bit Server VM (fastdebug build 24-internal-adhoc.zifeihan.jdk, mixed mode)
        ```

        Error message:
        ```
        Command line: [/home/zifeihan/jdk/build/linux-riscv64-server-fastdebug/images/jdk/bin/java -cp /home/zifeihan/jdk/build/linux-riscv64-server-fastdebug/test-support/jtreg_test_hotspot_jtreg_compiler_c2_cr7200264_TestIntVect_java/classes/0/compiler/c2/cr7200264/TestIntVect.d:/home/zifeihan/jdk/test/hotspot/jtreg/compiler/c2/cr7200264:/home/zifeihan/jdk/build/linux-riscv64-server-fastdebug/test-support/jtreg_test_hotspot_jtreg_compiler_c2_cr7200264_TestIntVect_java/classes/0/test/lib:/home/zifeihan/jdk/build/linux-riscv64-server-fastdebug/test-support/jtreg_test_hotspot_jtreg_compiler_c2_cr7200264_TestIntVect_java/classes/0:/home/zifeihan/jtreg/lib/javatest.jar:/home/zifeihan/jtreg/lib/jtreg.jar:/home/zifeihan/jtreg/lib/junit-platform-console-standalone-1.9.2.jar:/home/zifeihan/jtreg/lib/testng-7.3.0.jar:/home/zifeihan/jtreg/lib/guice-5.1.0.jar:/home/zifeihan/jtreg/lib/jcommander-1.82.jar -Djava.library.path=/home/zifeihan/jdk/build/linux-riscv64-server-fastdebug/images/test/hotspot/jtreg/native -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:MaxRAMPercentage=0.78125 -Dtest.boot.jdk=/home/zifeihan/jre/jre22 -Djava.io.tmpdir=/home/zifeihan/jdk/build/linux-riscv64-server-fastdebug/test-support/jtreg_test_hotspot_jtreg_compiler_c2_cr7200264_TestIntVect_java/tmp -Dir.framework.server.port=45937 -XX:+PrintCompilation -XX:+UnlockDiagnosticVMOptions -XX:+LogCompilation -XX:CompilerDirectivesFile=test-vm-compile-commands-pid-101724.log -XX:CompilerDirectivesLimit=431 -XX:-OmitStackTraceInFastThrow -DShouldDoIRVerification=true -XX:-BackgroundCompilation -XX:CompileCommand=quiet compiler.lib.ir_framework.test.TestVM compiler.c2.cr7200264.TestIntVect ]
        [2024-06-12T06:46:51.889815918Z] Gathering output for process 101748
        [2024-06-12T06:46:51.899514171Z] Waiting for completion for process 101748
        [2024-06-12T06:47:09.798159671Z] Waiting for completion finished for process 101748
        Output and diagnostic info for process 101748 was saved into 'pid-101748-output.log'

        Messages from Test VM
        ---------------------
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_addc: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_addv: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_adda: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_subc: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_subv: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_suba: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_mulc: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_mulc_n: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_mulv: None of the feature constraints met (applyIfCPUFeatureOr): sse4.1, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_mula: None of the feature constraints met (applyIfCPUFeatureOr): sse4.1, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 3 in test_divc: None of the feature constraints met (applyIfCPUFeatureOr): avx2, true, sve, true
        [IREncodingPrinter] Disabling IR matching for rule 3 of 3 in test_divc: Not all feature constraints are met (applyIfCPUFeatureAnd): asimd, true, sve, false
        [IREncodingPrinter] Disabling IR matching for rule 1 of 3 in test_divc_n: None of the feature constraints met (applyIfCPUFeatureOr): avx2, true, sve, true
        [IREncodingPrinter] Disabling IR matching for rule 3 of 3 in test_divc_n: Not all feature constraints are met (applyIfCPUFeatureAnd): asimd, true, sve, false
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_andc: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_andv: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_anda: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_orc: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_orv: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_ora: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_xorc: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_xorv: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 1 in test_xora: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_sllc: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_sllc_n: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_sllc_o: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_sllc_on: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_sllv: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_srlc: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_srlc_n: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_srlc_o: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_srlc_on: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_srlv: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_srac: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_srac_n: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_srac_o: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_srac_on: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true
        [IREncodingPrinter] Disabling IR matching for rule 1 of 2 in test_srav: None of the feature constraints met (applyIfCPUFeatureOr): sse2, true, asimd, true


        STDERR:
        compiler.lib.ir_framework.shared.TestFormatException:
        One or more format violations have been detected:

        Violations (19)
        ---------------
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_mulc(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srav(int[],int[],int).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srlc(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srlc_o(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srlc_n(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_sllv(int[],int[],int).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_divc_n(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_divc(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srlv(int[],int[],int).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_sllc_on(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srlc_on(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srac(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_mulc_n(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srac_on(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_sllc(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srac_o(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_sllc_n(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srac_n(int[],int[]).
         - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_sllc_o(int[],int[]).
        /============/
        at compiler.lib.ir_framework.shared.TestFormat.throwIfAnyFailures(TestFormat.java:85)
        at compiler.lib.ir_framework.driver.irmatching.parser.TestClassParser.createTestClass(TestClassParser.java:73)
        at compiler.lib.ir_framework.driver.irmatching.parser.TestClassParser.parse(TestClassParser.java:61)
        at compiler.lib.ir_framework.TestFramework.runTestVM(TestFramework.java:751)
        at compiler.lib.ir_framework.TestFramework.start(TestFramework.java:719)
        at compiler.lib.ir_framework.TestFramework.start(TestFramework.java:339)
        at compiler.lib.ir_framework.TestFramework.run(TestFramework.java:223)
        at compiler.lib.ir_framework.TestFramework.run(TestFramework.java:212)
        at compiler.c2.cr7200264.TestIntVect.main(TestIntVect.java:49)
        at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:103)
        at java.base/java.lang.reflect.Method.invoke(Method.java:580)
        at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:333)
        at java.base/java.lang.Thread.run(Thread.java:1575)

        JavaTest Message: Test threw exception: compiler.lib.ir_framework.shared.TestFormatException
        JavaTest Message: shutting down test


        TEST RESULT: Failed. Execution failed: `main' threw exception: compiler.lib.ir_framework.shared.TestFormatException: One or more format violations have been detected: Violations (19) --------------- - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_mulc(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srav(int[],int[],int). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srlc(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srlc_o(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srlc_n(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_sllv(int[],int[],int). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_divc_n(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_divc(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srlv(int[],int[],int). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_sllc_on(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srlc_on(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srac(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_mulc_n(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srac_on(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_sllc(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srac_o(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_sllc_n(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_srac_n(int[],int[]). - VMInfo: MaxVectorSize is not larger than zero for IR rule 2 at void compiler.c2.cr7200264.TestIntVect.test_sllc_o(int[],int[]). /============/
        --------------------------------------------------
        Test results: failed: 1
        Report written to /home/zifeihan/jdk/build/linux-riscv64-server-fastdebug/test-results/jtreg_test_hotspot_jtreg_compiler_c2_cr7200264_TestIntVect_java/html/report.html
        Results written to /home/zifeihan/jdk/build/linux-riscv64-server-fastdebug/test-support/jtreg_test_hotspot_jtreg_compiler_c2_cr7200264_TestIntVect_java
        Error: Some tests failed or other problems occurred.
        Finished running test 'jtreg:test/hotspot/jtreg/compiler/c2/cr7200264/TestIntVect.java'
        Test report is stored in build/linux-riscv64-server-fastdebug/test-results/jtreg_test_hotspot_jtreg_compiler_c2_cr7200264_TestIntVect_java

        ==============================
        Test summary
        ==============================
           TEST TOTAL PASS FAIL ERROR
           jtreg:test/hotspot/jtreg/compiler/c2/cr7200264/TestIntVect.java
        >> 1 0 1 0 <<
        ==============================
        TEST FAILURE

        make[1]: *** [/home/zifeihan/jdk/make/Init.gmk:327: main] Error 1
        make: *** [/home/zifeihan/jdk/make/Init.gmk:189: test] Error 2
        [zifeihan@fedora-riscv jdk]$
        ```

              Assignee:
              Gui Cao
              Reporter:
              Gui Cao
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: