8334078: TestIntVect.java fails without RVV after JDK-8332153