src/hotspot/os_cpu/linux_riscv/vm_version_linux_riscv.cpp
@@ -131,7 +131,12 @@ void VM_Version::setup_cpu_available_features() {
       if (_feature_list[i]->feature_string()) {
         const char* tmp = _feature_list[i]->pretty();
         if (strlen(tmp) == 1) {
+          // Feature string is expected to be in multi-character form
+          // like rvc, rvv, etc so that it will be easier to specify
+          // target feature string in tests.
           strcat(buf, " ");
+          strcat(buf, "r");
+          strcat(buf, "v");
           strcat(buf, tmp);
         } else {
           // Feature string is expected to be lower case.
